In Weight Paint mode, draw error when using X-Ray + Clipping Region #81013

Closed
opened 2020-09-21 01:31:59 +02:00 by Sam Brubaker · 8 comments

System Information
Linux x86_64
GPU: GeForce GTX 1080 Ti
NVIDIA Driver Version: 384.130

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 18:23, hash: 0335c1fd21
Worked: no 2.8x version (I tested 2.80, 2.82a, 2.83)

Weight Paint bug.blend

How to reproduce:

  • Open the attached file
  • Enter Weight Paint mode with X-Ray view enabled

Hide a portion of the mesh with a Clipping region (Alt + B)

Here's the odd result I get:
Weight Paint bug.png

**System Information** Linux x86_64 GPU: GeForce GTX 1080 Ti NVIDIA Driver Version: 384.130 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 18:23, hash: 0335c1fd21 Worked: no 2.8x version (I tested 2.80, 2.82a, 2.83) [Weight Paint bug.blend](https://archive.blender.org/developer/F8904344/Weight_Paint_bug.blend) **How to reproduce**: - Open the attached file - Enter Weight Paint mode with X-Ray view enabled # Hide a portion of the mesh with a Clipping region (Alt + B) Here's the odd result I get: ![Weight Paint bug.png](https://archive.blender.org/developer/F8904353/Weight_Paint_bug.png)
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. My guess to why this happends would be that the clip region is not applied to every render pass.

System Information
Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 18:23, hash: 0335c1fd21
Worked: no 2.8x version (I tested 2.80, 2.82a, 2.83)

Can confirm. My guess to why this happends would be that the clip region is not applied to every render pass. **System Information** Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 18:23, hash: `0335c1fd21` Worked: no 2.8x version (I tested 2.80, 2.82a, 2.83)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-09-21 14:24:56 +02:00
Member

Think I have the fix, patch incoming...

Think I have the fix, patch incoming...

This issue was referenced by af7378bf2a

This issue was referenced by af7378bf2aed56494e86280f716612b02de6b7e8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81013
No description provided.